fix: "\n"을 System.lineSeparator()로 변경